--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,19 @@
 # Services
-APP_NAME=GENERATE API
-APP_PORT=5008
+NODE_ENV=development
+PROJECT_NAME=GENERATE API
+PROJECT_PORT=5008
 
 # Databases
-PROJECT_DB_HOST=
-PROJECT_DB_PORT=
+PROJECT_DB_HOST=localhost
+PROJECT_DB_PORT=3306
 PROJECT_DB_USER=
 PROJECT_DB_PASS=
 PROJECT_DB_NAME=
 
-COUPON_DB_HOST=mongodb://localhost:27017
-COUPON_DB_NAME=sika_coupons_v2
-COUPON_DB_USER=
-COUPON_DB_PASS=
+PROJECT_MONGO_DB_HOST=mongodb://localhost/import
+
+# PATH
+PATH_IMPORTS=/imports
+PATH_ALLOCATIONS=/imports/allocations
+PATH_COUPONS=/imports/coupons
+PATH_ERRORS=/imports/errors
