--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/typeorm": "^9.0.1",
         "app-root-path": "^3.1.0",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.13.2",
         "csv-parse": "^5.3.1",
-        "dotenv": "^16.0.3",
         "joi": "^17.7.0",
         "moment": "^2.29.4",
         "mongoose": "^6.7.1",
